# InCortex

./: .gitignore  CONTRIBUTING.md  Design_Doc.md  README.md  ROADMAP.md  incortex.toml.example  pyproject.toml
docs/: README.md  api_reference.md  architecture.md  biological_model.md  development_phases.md  learning_system.md  math_model.md  memory_system.md  safety_model.md
docs/understanding/: phase_10_api_config.md  phase_1_cell_system.md  phase_2_tissue_system.md  phase_3_organ_system.md  phase_4_cortex_core.md  phase_5_memory_learning.md  phase_6_voice_system.md  phase_7_tool_system.md  phase_8_development_organ.md  phase_9_advanced_learning.md
examples/: README.md  dev_demo.py  strategy_demo.py  voice_demo.py
incortex/: README.md  __init__.py
incortex/api/: README.md  __init__.py  main.py  routes_chat.py  routes_feedback.py  routes_memory.py  schemas.py
incortex/cells/: README.md  __init__.py  base_cell.py  cell_math.py  ear_cell.py  feedback_cell.py  intent_cell.py  memory_cell.py  mouth_cell.py  reasoning_cell.py  response_cell.py  safety_cell.py  text_cell.py
incortex/core/: README.md  __init__.py  config.py  cortex.py  message.py  router.py  scheduler.py  state.py
incortex/interfaces/: README.md  __init__.py  voice.py
incortex/learning/: README.md  __init__.py  evaluator.py  feedback.py  (+4 more)
scripts/: README.md  run_api.py  run_cli.py  run_voice.py
tests/: README.md  test_api.py  test_cells.py  test_config.py  test_core.py  test_development.py  test_learning.py  test_memory.py  test_organs.py  test_safety.py  test_speech.py  test_tissues.py
(+43 files in other folders)
